--- a/index.html
+++ b/index.html
@@ -65,30 +65,12 @@
       <li><a href="./clients/5two.html" class="project-link">5TWO - LIVE PERFORMANCE</a></li>
     </ul>
 
-
-    <h2>Events Calendar</h2>
-      Please fill out 
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSe87m3N4u88w0FeH_OwBAfL8UxwI9EWGgatwY2uwvq9sT0oWA/viewform?usp=share_link">
-        this form
-      </a> to request studio time.
-    <div class="calendar-container">
-      <iframe
-        src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FNew_York&showPrint=0&src=YmVoZXJlc291bmRAZ21haWwuY29t&color=%23039be5"
-        style="border:solid 1px #777"
-        width="100%" height="300"
-        frameborder="0" scrolling="no">
-      </iframe>
-    </div>
-
     <h2>Contact</h2>
     <p>Reach out to inquire about pricing for installation work & commissions.</p>
 
-    <h2>Stay Tuned via</h2>
-    <nav>
-      <a href="https://www.instagram.com/luke_magette">INSTA</a> |
-      <a href="./beheresound/shwank/shwank.html">Shwank</a> |
-      <a href="./beheresound/jh/jh.html">JH</a> |
-      <a href="./beheresound/misc.html">Misc</a>
+      <a href="https://www.instagram.com/luke_magette">instagram</a> |
+      <a href="./beheresound/shwank/shwank.html">youtube</a> |
+
     </nav>
 
     <br><br>
@@ -97,7 +79,6 @@
   <img src="beach-footer.webp" alt="beach" class="billboard-img" />
   </div>    <br><br>
 
-    <a href="./blog.html">Blog</a>
   </div>
 </body>
 </html>
