--- a/videos/shwankgaze/shwankgaze.html
+++ b/videos/shwankgaze/shwankgaze.html
@@ -22,7 +22,7 @@
 
   <!-- 🎬 Centered Video Clip -->
   <div class="header-image-container">
-    <a href="https://youtu.be/AsN2Yded37U?si=FoviTSw7pfIv5uZS" target="_blank">
+    <a href="https://www.instagram.com/reel/DLX9MzgRUem/?utm_source=ig_web_copy_link" target="_blank">
       <video autoplay muted loop playsinline class="media">
         <source src="../videoclips/shwankgaze-preview.mp4" type="video/mp4" />
         Your browser does not support the video tag.
