--- a/videos/shwankgaze/shwankgaze.html
+++ b/videos/shwankgaze/shwankgaze.html
@@ -35,7 +35,7 @@
   <section>
     <h1 class="title">SHWANKGAZE</h1>
       <ul style="list-style: none; padding-left: 0; line-height: 1.3;">
-    <li>Visualizer for Shwank, 2024.</li>
+    <li>Visualizer for Shwank, 2025.</li>
     <li>Promotional reel used in the rollout for Shwank's live EP, "Battle of the Bands".</li>
     <p></p>
     <!-- 📷 Optional Photo Before Text -->
@@ -46,10 +46,10 @@
  
     <p class="section-label"><strong>Details</strong></p>
       <ul style="list-style: none; padding-left: 0; line-height: 1.3;">
-        <li>Runtime – XXX.</li>
-        <li>Shot on Sony DCR Handycam XXX.</li>
+        <li>Runtime – 1:58.</li>
+        <li>Shot on Sony Handycam DCR-HC30</li>
         <li>Edited with Final Cut Pro for Mac.</li>
-        <li>Shot with Google Earth archival footage.</li>
+        <li>Compiled from Google Earth archival footage.</li>
 
       </ul>
     
