--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <li><a href="./videos/mood-ring/mood-ring.html" class="project-link">“MOOD RING” BY SOFIE LOPEZ – 2025</a></li>
       <li><a href="./videos/take-it-or-leave/take-it-or-leave.html" class="project-link">“TAKE IT OR LEAVE” BY SOFIE LOPEZ – 2025</a></li>
       <li><a href="./videos/motion-graphics/motion-graphics.html" class="project-link">UNTITLED MOTION GRAPHICS PROJECT – 2023</a></li>
-      <li><a href="./videos/shwankgaze/shwankgaze.html" class="project-link">"SHWANKGAZE" VISUALIZER – 2024</a></li>
+      <li><a href="./videos/shwankgaze/shwankgaze.html" class="project-link">"SHWANKGAZE" VISUALIZER – 2025</a></li>
       <li><a href="./videos/oranges/oranges.html" class="project-link">“ORANGES” BY KIERA LYNN – 2023</a></li>
       <li><a href="./videos/fame/fame.html" class="project-link">FAME FASHION SHOW REEL - 2023</a></li>
     </ul>
@@ -69,7 +69,7 @@
     <p>Reach out to inquire about pricing for installation work & commissions.</p>
 
       <a href="https://www.instagram.com/luke_magette">instagram</a> |
-      <a href="./beheresound/shwank/shwank.html">youtube</a> |
+      <a href="https://www.youtube.com/@lukem5798">youtube</a> |
 
     </nav>
 
