--- a/videos/oranges/oranges.html
+++ b/videos/oranges/oranges.html
@@ -22,7 +22,7 @@
 
   <!-- 🎬 Centered Video Clip -->
   <div class="header-image-container">
-    <a href="https://youtu.be/AsN2Yded37U?si=FoviTSw7pfIv5uZS" target="_blank">
+    <a href="https://youtu.be/XRrgBSA1y1Q" target="_blank">
       <video autoplay muted loop playsinline class="media">
         <source src="../videoclips/oranges-preview.mp4" type="video/mp4" />
         Your browser does not support the video tag.
@@ -46,11 +46,11 @@
         
      <p class="section-label"><strong>Credits</strong></p>
       <ul style="list-style: none; padding-left: 0; line-height: 1.3;">
-        <li>Featuring Kiera Kennedy and Zachary Berkowicz.</li>
+        <li>Featuring Kiera Kennedy and Zach Berkowicz.</li>
 
     <p class="section-label"><strong>Details</strong></p>
       <ul style="list-style: none; padding-left: 0; line-height: 1.3;">
-        <li>Runtime – XXX.</li>
+        <li>Runtime – 4:02.</li>
         <li>Shot on Panasonic SDR-S26.</li>
         <li>Edited with Final Cut Pro for Mac.</li>
         <li>Shot on location in Hoboken, NJ.</li>
