--- a/videos/index.html
+++ b/videos/index.html
@@ -116,17 +116,70 @@
   </div>
 
     <!-- Video Block 5: SHWANKGAZE -->
-    <div class="video-preview">
-      <a href="motion-graphics.html">
-        <video autoplay muted loop playsinline class="preview-clip">
-          <source src="videos/videoclips/shwankgaze-preview.mp4" type="video/mp4" />
-        </video>
-      </a>
-     <p class="project-title"><a href="shwankgaze/shwankgaze.html">SHWANKGAZE, 2025</a>
-<p>VISUALIZER FOR SHWANK.<p>
     </div>
+  <div class="video-preview">
+    <a href="https://www.instagram.com/reel/DLX9MzgRUem/?utm_source=ig_web_copy_link">
+      <video
+        class="preview-clip media"
+        autoplay
+        muted
+        loop
+        playsinline
+        class="preview-clip"
+        data-src="videoclips/shwankgaze-preview.mp4"
+        poster="images/shwankgaze1.webp"
+        preload="none"
+      ></video>
+    </a>
+    <p class="project-title">
+      <a href="shwankgaze/shwankgaze.html">SHWANKGAZE, 2025</a>
+    </p>
+    <p>VISUALIZER FOR SHWANK</p>
+  </div>
 
-    <!-- Video Block 5: ORANGES -->
+    <!-- Video Block 5: ORANGES --> 
+      </div>
+  <div class="video-preview">
+    <a href="https://youtu.be/XRrgBSA1y1Q">
+      <video
+        class="preview-clip media"
+        autoplay
+        muted
+        loop
+        playsinline
+        class="preview-clip"
+        data-src="videoclips/oranges-preview.mp4"
+        poster="images/oranges1.webp"
+        preload="none"
+      ></video>
+    </a>
+    <p class="project-title">
+      <a href="oranges/oranges.html">ORANGES, 2023</a>
+    </p>
+    <p>MUSIC VIDEO FOR KIERA LYN</p>
+  </div>     
+  
+  </div>
+  <div class="video-preview">
+    <a href="https://youtu.be/XRrgBSA1y1Q">
+      <video
+        class="preview-clip media"
+        autoplay
+        muted
+        loop
+        playsinline
+        class="preview-clip"
+        data-src="videoclips/shwankgaze-preview.mp4"
+        poster="images/shwankgaze1.webp"
+        preload="none"
+      ></video>
+    </a>
+    <p class="project-title">
+      <a href="mood-ring/mood-ring.html">SHWANKGAZE, 2025</a>
+    </p>
+    <p>VISUALIZER FOR SHWANK</p>
+  </div>
+    
     <div class="video-preview">
       <a href="oranges.html">
         <video autoplay muted loop playsinline class="preview-clip">
