--- a/videos/fame/fame.html
+++ b/videos/fame/fame.html
@@ -20,7 +20,7 @@
   <!-- 🔙 Navigation Links -->
   <p><a href="../../index.html">← Back to Home</a> | <a href="../index.html">← Back to Videos</a></p>
 
-  <!-- 🎬 Centered Video Clip -->
+  <!-- 🎬 Centered Video Clip --> https://www.instagram.com/reel/C1XcaEJx5nf/?utm_source=ig_web_copy_link
   <div class="header-image-container">
     <a href="https://youtu.be/AsN2Yded37U?si=FoviTSw7pfIv5uZS" target="_blank">
       <video autoplay muted loop playsinline class="media">
