--- a/videos/fame/fame.html
+++ b/videos/fame/fame.html
@@ -20,9 +20,9 @@
   <!-- 🔙 Navigation Links -->
   <p><a href="../../index.html">← Back to Home</a> | <a href="../index.html">← Back to Videos</a></p>
 
-  <!-- 🎬 Centered Video Clip --> https://www.instagram.com/reel/C1XcaEJx5nf/?utm_source=ig_web_copy_link
+  <!-- 🎬 Centered Video Clip --> 
   <div class="header-image-container">
-    <a href="https://youtu.be/AsN2Yded37U?si=FoviTSw7pfIv5uZS" target="_blank">
+    <a href="https://www.instagram.com/reel/C1XcaEJx5nf/?utm_source=ig_web_copy_link" target="_blank">
       <video autoplay muted loop playsinline class="media">
         <source src="../videoclips/fame-preview.mp4" type="video/mp4" />
         Your browser does not support the video tag.
@@ -46,8 +46,8 @@
 
     <p class="section-label"><strong>Details</strong></p>
       <ul style="list-style: none; padding-left: 0; line-height: 1.3;">
-        <li>Runtime – XXX.</li>
-        <li>Shot on Panasonic SDR-S26 and Sony DCR Handycam XXX.</li>
+        <li>Runtime – 1:43.</li>
+        <li>Shot on Panasonic SDR-S26 and Sony Handycam DCR-HC30.</li>
         <li>Edited with Final Cut Pro for Mac and Adobe After Effects.</li>
         <li>Shot in Hoboken, NJ.</li>
 
