--- a/videos/index.html
+++ b/videos/index.html
@@ -127,7 +127,7 @@
         playsinline
         class="preview-clip"
         data-src="videoclips/shwankgaze-preview.mp4"
-        poster="images/shwankgaze1.webp"
+        poster="images/shwankgaze-still1.webp"
         preload="none"
       ></video>
     </a>
@@ -149,19 +149,20 @@
         playsinline
         class="preview-clip"
         data-src="videoclips/oranges-preview.mp4"
-        poster="images/oranges1.webp"
+        poster="images/oranges-still1.webp"
         preload="none"
       ></video>
     </a>
     <p class="project-title">
       <a href="oranges/oranges.html">ORANGES, 2023</a>
     </p>
-    <p>MUSIC VIDEO FOR KIERA LYN</p>
+    <p>MUSIC VIDEO FOR KIERA LYNN</p>
   </div>     
-  
-  </div>
+
+    <!-- Video Block 5: FAME FASHION SHOW --> 
+      </div>
   <div class="video-preview">
-    <a href="https://youtu.be/XRrgBSA1y1Q">
+    <a href="https://www.instagram.com/reel/C1XcaEJx5nf/?utm_source=ig_web_copy_link">
       <video
         class="preview-clip media"
         autoplay
@@ -169,36 +170,16 @@
         loop
         playsinline
         class="preview-clip"
-        data-src="videoclips/shwankgaze-preview.mp4"
-        poster="images/shwankgaze1.webp"
+        data-src="videoclips/fame-preview.mp4"
+        poster="images/fame-still1.webp"
         preload="none"
       ></video>
     </a>
     <p class="project-title">
-      <a href="mood-ring/mood-ring.html">SHWANKGAZE, 2025</a>
+      <a href="oranges/oranges.html">FAME FASHION SHOW REEL, 2023</a>
     </p>
-    <p>VISUALIZER FOR SHWANK</p>
-  </div>
-    
-    <div class="video-preview">
-      <a href="oranges.html">
-        <video autoplay muted loop playsinline class="preview-clip">
-          <source src="videos/videoclips/oranges-preview.mp4" type="video/mp4" />
-        </video>
-      </a>
-     <p class="project-title"><a href="oranges/oranges.html">ORANGES, 2023</a>
-<p>MUSIC VIDEO FOR KIERA LYNN.<p>    </div>
-
-    <!-- Video Block 5: FAME FASHION SHOW -->
-    <div class="video-preview">
-      <a href="fame.html">
-        <video autoplay muted loop playsinline class="preview-clip">
-          <source src="videos/videoclips/fame-preview.mp4" type="video/mp4" />
-        </video>
-      </a>
-     <p class="project-title"><a href="fame/fame.html">FAME FASHION SHOW REEL, 2023</a>
-<p>RECAP VIDEO FOR STEVENS INST OF TECHNOLOGY.<p>
-    </div>
+    <p>RECAP VIDEO FOR STEVENS INST OF TECHNOLOGY</p>
+  </div>    
 
     <!-- Video Block 6: HOLDING ON-->
     <div class="video-preview">
