--- a/clients/sofie-lopez.html
+++ b/clients/sofie-lopez.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sofie Lopez – Portfolio — Luke M</title>
-  <link rel="stylesheet" href="../../artbyluke-main/style.css" />
+  <link rel="stylesheet" href="../artbyluke-main/style.css" />
 
   <meta property="og:title" content="Sofie Lopez – Portfolio by Luke M" />
   <meta property="og:description" content="Selected works created with Sofie Lopez, including videos, posters, concerts, and social media campaigns." />
@@ -32,11 +32,11 @@
     <div class="media-grid">
       <div class="media">
         <video controls poster="../../thumbnails/mood-ring-thumb.webp" class="media">
-          <source src="../../videos/mood-ring/mood-ring-preview.mp4" type="video/mp4" />
+          <source src="../videos/mood-ring/mood-ring-preview.mp4" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
         <p class="caption">“Mood Ring” (2025)</p>
-        <a href="../../videos/mood-ring/mood-ring.html" class="project-link">View Full Project →</a>
+        <a href="../videos/mood-ring/mood-ring.html" class="project-link">View Full Project →</a>
       </div>
 
       <div class="media">
