--- a/clients/sofie-lopez.html
+++ b/clients/sofie-lopez.html
@@ -23,16 +23,17 @@
 
     <!-- Page Header -->
     <header>
-      <h1 class="title">Sofie Lopez</h1>
-      <p class="intro-paragraph">Video direction, concert visuals, posters, and social media content created in collaboration with <em>Sofie Lopez</em>.</p>
+    <div class="content">
+      <h1 class="title">SOFIE LOPEZ</h1>
+    <p class="intro-paragraph">Samples from various collaborative efforts with NJ pop act <em>sofie lopez</em>.</p>
     </header>
 
     <!-- Video Section -->
     <h2>Video Projects</h2>
     <div class="media-grid">
       <div class="media">
-        <video controls poster="../../thumbnails/mood-ring-thumb.webp" class="media">
-          <source src="../videos/mood-ring/mood-ring-preview.mp4" type="video/mp4" />
+        <video controls poster="../../imagess/mood-ring-still1.webp" class="media">
+          <source src="../videos/mood-ring-preview.mp4" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
         <p class="caption">“Mood Ring” (2025)</p>
