--- a/videos/dogfight/dogfight.html
+++ b/videos/dogfight/dogfight.html
@@ -22,7 +22,7 @@
 
   <!-- 🎬 Centered Video Clip -->
   <div class="header-image-container">
-    <a href="https://youtu.be/YUAKauLhYCY?si=I-yBTfFlOTs81N0I" target="_blank">
+    <a href="https://www.youtube.com/watch?v=IMhd-R6Rpjg" target="_blank">
       <video autoplay muted loop playsinline class="media">
         <source src="../videoclips/dogfight-preview.mp4" type="video/mp4" />
         Your browser does not support the video tag.
@@ -36,7 +36,7 @@
     <h1 class="title">DOGFIGHT</h1>
       <ul style="list-style: none; padding-left: 0; line-height: 1.3;">
     <li>Visualizer for worren, 2025.</li>
-    <li>"Dogfight" is featured on worren's debut EP, "Notches".</li>
+    <li>"dogfight" is featured on worren's debut EP, "notches".</li>
     <p></p>
     <!-- 📷 Optional Photo Before Text -->
     
@@ -46,11 +46,12 @@
     
     <p class="section-label"><strong>Credits</strong></p>
       <ul style="list-style: none; padding-left: 0; line-height: 1.3;">
-        <li>Special thanks to Sofia Lopez Trinity Lundemo on behalf of 938collective.</li>
+        </li>"dogfight" written, produced, & mixed by Jack Scherban.<li>
+        <li>Special thanks to Trinity Lundemo on behalf of 938collective, Sofia Lopez, & Brian Collins.</li>
 
     <p class="section-label"><strong>Details</strong></p>
       <ul style="list-style: none; padding-left: 0; line-height: 1.3;">
-        <li>Runtime – XXX.</li>
+        <li>Runtime – 2:43.</li>
         <li>Shot on iPhone.</li>
         <li>Edited with Final Cut Pro for Mac.</li>
         <li>Shot on location in Manhattan, NY.</li>
