Update navigation and section headings in HTML

--- a/clients/sofie-lopez.html
+++ b/clients/sofie-lopez.html
@@ -18,22 +18,22 @@
   <div class="content">
     <!-- Navigation -->
     <nav>
-      <a href="../../index.html">← Back to Homepage</a>
+      <a href="../index.html">← Back to Homepage</a>
     </nav>
 
     <!-- Page Header -->
     <header>
     <div class="content">
       <h1 class="title">SOFIE LOPEZ</h1>
-    <p class="intro-paragraph">Samples from various collaborative efforts with NJ pop act <em>sofie lopez</em>.</p>
+    <p class="intro-paragraph">Selections from various collaborative efforts with NJ pop act <em>sofie lopez</em>.</p>
     </header>
 
     <!-- Video Section -->
-    <h2>Video Projects</h2>
+    <h2>MUSIC VIDEOS</h2>
     <div class="media-grid">
       <div class="media">
-        <video controls poster="../../imagess/mood-ring-still1.webp" class="media">
-          <source src="../videos/mood-ring-preview.mp4" type="video/mp4" />
+        <video controls poster="../videos/images/mood-ring-still1.webp" class="media">
+          <source src="../videos/videoclips/mood-ring-preview.mp4" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
         <p class="caption">“Mood Ring” (2025)</p>
@@ -41,8 +41,8 @@
       </div>
 
       <div class="media">
-        <video controls poster="../../thumbnails/take-it-or-leave-thumb.webp" class="media">
-          <source src="../../videos/take-it-or-leave/take-it-or-leave-preview.mp4" type="video/mp4" />
+        <video controls poster="../videos/images/take-it-or-leave-still1.webp" class="media">
+          <source src="../videos/videoclips/take-it-or-leave-preview.mp4" type="video/mp4" />
         </video>
         <p class="caption">“Take It or Leave” (2025)</p>
         <a href="../../videos/take-it-or-leave/take-it-or-leave.html" class="project-link">View Full Project →</a>
@@ -50,7 +50,7 @@
     </div>
 
     <!-- Posters Section -->
-    <h2>Posters</h2>
+    <h2>PROMO GRAPHICS</h2>
     <div class="poster-grid">
       <div class="poster">
         <img src="../../images/sofie-poster1.webp" alt="Concert Poster 1" class="media" />
@@ -63,14 +63,14 @@
     </div>
 
     <!-- Concert Photos -->
-    <h2>Concert Photos</h2>
+    <h2>PHOTOGRAPHY</h2>
     <div class="photo-grid">
       <img src="../../images/sofie-concert1.webp" alt="Sofie Lopez live" class="media" />
       <img src="../../images/sofie-concert2.webp" alt="Sofie Lopez performance" class="media" />
     </div>
 
     <!-- Social Media Content -->
-    <h2>Social Media Content</h2>
+    <h2>SOCIAL CONTENT</h2>
     <div class="social-grid">
       <div class="media">
         <video controls poster="../../thumbnails/sofie-social1.webp" class="media">
@@ -87,7 +87,7 @@
     <!-- Footer Navigation -->
     <nav>
       <br>
-      <a href="../../index.html">← Back to Homepage</a>
+      <a href="../index.html">← Back to Homepage</a>
     </nav>
   </div>
 </body>
